Fix there being a small gap between suns/moons and walls

--- a/components/CardFront/styles.module.scss
+++ b/components/CardFront/styles.module.scss
@@ -517,7 +517,7 @@
 
   .inactive {
     img {
-      width: 43.5%;
+      width: 44%;
       margin: auto;
       margin-bottom: 0.3%;
       filter: drop-shadow(0 0 1rem rgba(0, 0, 0, 0.2));
@@ -534,7 +534,7 @@
 
   .active {
     img {
-      width: 81.2%;
+      width: 81.3%;
       margin: auto;
       margin-bottom: 0.3%;
     }
